# scikit-umfpack

./: meson.build  pyproject.toml
.github/workflows/: build_test.yml
scikits/umfpack/: interface.py  meson.build  umfpack.i  umfpack.py
scikits/umfpack/tests/: test_interface.py  test_umfpack.py
